--- a/index.html
+++ b/index.html
@@ -1,115 +1,188 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Registro de Servicios</title>
+  <meta charset="UTF-8">
+  <title>Captura Institucional</title>
   <style>
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #003366;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .container {
-      max-width: 600px;
-      width: 90%;
-      background-color: white;
-      color: black;
       padding: 20px;
-      margin-top: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      max-width: 600px;
+      margin: auto;
+      background-color: #f4f6f7;
     }
-    h1 {
-      text-align: center;
-      color: #003366;
+    h2 {
+      color: #2c3e50;
+      border-bottom: 2px solid #2980b9;
+      padding-bottom: 5px;
     }
     label {
       display: block;
-      margin-top: 15px;
+      margin-top: 10px;
     }
-    select, input {
+    input, select, textarea {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
-      border-radius: 5px;
       border: 1px solid #ccc;
+      border-radius: 4px;
     }
     button {
-      margin-top: 20px;
-      padding: 10px;
-      width: 100%;
-      background-color: #003366;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background-color: #2980b9;
       color: white;
       border: none;
-      border-radius: 5px;
-      font-weight: bold;
       cursor: pointer;
+      border-radius: 4px;
     }
     button:hover {
-      background-color: #0055aa;
+      background-color: #3498db;
     }
-    #marcaAgua {
+    .seccion {
+      margin-bottom: 30px;
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 20px;
+      background-color: #ffffff;
+      padding: 15px;
+      border-radius: 6px;
+    }
+    .marca {
+      text-align: center;
       margin-top: 40px;
       font-size: 0.8em;
-      text-align: center;
-      color: white;
-    }
-    @media (max-width: 600px) {
-      .container {
-        margin-top: 15px;
-        padding: 15px;
-      }
+      color: #7f8c8d;
     }
   </style>
 </head>
 <body onload="generarFolio()">
-  <div class="container" id="formulario">
-    <h1>Inicio de Jornada</h1>
-    <label for="folio">Folio:</label>
-    <input type="text" id="folio" readonly />
 
-    <label for="servicio">Tipo de Servicio:</label>
-    <select id="servicio">
+  <h2>Registro de Asistencia</h2>
+  <div class="seccion">
+    <label>Nombre:</label>
+    <input type="text" id="nombre">
+
+    <label>Fecha Entrada:</label>
+    <input type="date" id="fechaEntrada">
+
+    <label>Hora Entrada:</label>
+    <input type="time" id="horaEntrada">
+
+    <label>Fecha Salida:</label>
+    <input type="date" id="fechaSalida">
+
+    <label>Hora Salida:</label>
+    <input type="time" id="horaSalida">
+
+    <button onclick="enviarAsistencia()">Registrar Asistencia</button>
+  </div>
+
+  <h2>Captura de Servicios</h2>
+  <div class="seccion">
+    <label>Folio:</label>
+    <input type="text" id="folio" readonly>
+
+    <label>Fecha:</label>
+    <input type="date" id="fecha">
+
+    <label>Hora:</label>
+    <input type="time" id="hora">
+
+    <label>Telefonista:</label>
+    <input type="text" id="telefonista">
+
+    <label>Domicilio:</label>
+    <input type="text" id="domicilio">
+
+    <label>Destino:</label>
+    <input type="text" id="destino">
+
+    <label>Asignado a:</label>
+    <input type="text" id="asignadoA">
+
+    <label>Tipo de Servicio:</label>
+    <select id="tipoServicio">
       <option value="">Seleccione</option>
-      <option value="Atención presencial">Atención presencial</option>
-      <option value="Videollamada">Videollamada</option>
-      <option value="Llamada telefónica">Llamada telefónica</option>
-      <option value="Correo electrónico">Correo electrónico</option>
+      <option value="Traslado">Traslado</option>
+      <option value="Emergencia">Emergencia</option>
+      <option value="Consulta">Consulta</option>
       <option value="Otro">Otro</option>
     </select>
 
-    <button onclick="guardarCaptura()">Guardar</button>
+    <label>Observaciones:</label>
+    <textarea id="observaciones"></textarea>
+
+    <button onclick="enviarServicio()">Registrar Servicio</button>
   </div>
 
-  <div id="marcaAgua">
+  <div class="marca">
     Propiedad y diseño de Jesús Sánchez C. con colaboración de Microsoft Copilot.
   </div>
 
   <script>
-    async function generarFolio() {
-      // Simulación de folio desde Google Sheets
+    const endpoint = "https://script.google.com/macros/s/AKfycbw5EJwqYdBnp1GL_6bTUIY_635i43PF43zf4c8ohZl8UBEH8ZYhGdfWo2mX2hN4BYvzdw/exec";
+
+    function generarFolio() {
       const folio = "FOL-" + Date.now().toString().slice(-6);
       document.getElementById("folio").value = folio;
     }
 
-    function guardarCaptura() {
-      html2canvas(document.getElementById("formulario")).then(canvas => {
-        const link = document.createElement("a");
-        link.download = "captura_servicio.png";
-        link.href = canvas.toDataURL();
-        link.click();
+    function enviarAsistencia() {
+      const datos = {
+        tipo: "asistencia",
+        nombre: document.getElementById("nombre").value,
+        fechaEntrada: document.getElementById("fechaEntrada").value,
+        horaEntrada: document.getElementById("horaEntrada").value,
+        fechaSalida: document.getElementById("fechaSalida").value,
+        horaSalida: document.getElementById("horaSalida").value
+      };
 
-        // Limpiar formulario
-        document.getElementById("servicio").value = "";
+      fetch(endpoint, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(datos)
+      })
+      .then(res => res.text())
+      .then(msg => {
+        alert(msg);
+        document.querySelectorAll('#nombre, #fechaEntrada, #horaEntrada, #fechaSalida, #horaSalida').forEach(el => el.value = "");
+      })
+      .catch(err => alert("Error: " + err));
+    }
+
+    function enviarServicio() {
+      const datos = {
+        tipo: "servicio",
+        folio: document.getElementById("folio").value,
+        fecha: document.getElementById("fecha").value,
+        hora: document.getElementById("hora").value,
+        telefonista: document.getElementById("telefonista").value,
+        domicilio: document.getElementById("domicilio").value,
+        destino: document.getElementById("destino").value,
+        asignadoA: document.getElementById("asignadoA").value,
+        tipoServicio: document.getElementById("tipoServicio").value,
+        observaciones: document.getElementById("observaciones").value
+      };
+
+      if (!datos.domicilio || !datos.tipoServicio || !datos.asignadoA) {
+        alert("Por favor completa los campos obligatorios.");
+        return;
+      }
+
+      fetch(endpoint, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(datos)
+      })
+      .then(res => res.text())
+      .then(msg => {
+        alert(msg);
+        document.querySelectorAll('#fecha, #hora, #telefonista, #domicilio, #destino, #asignadoA, #tipoServicio, #observaciones').forEach(el => el.value = "");
         generarFolio();
-      });
+      })
+      .catch(err => alert("Error: " + err));
     }
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
 </body>
 </html>
