--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
-      max-width: 600px;
+      max-width: 700px;
       margin: auto;
       background-color: #f4f6f7;
     }
@@ -15,6 +15,7 @@
       color: #2c3e50;
       border-bottom: 2px solid #2980b9;
       padding-bottom: 5px;
+      margin-top: 40px;
     }
     label {
       display: block;
